# MemBlocks

./: .gitignore  HYBRID_SEARCH_README.md  README.md  evaluation_flow_analysis.md  evaluation_output.txt  evaluation_workflow copy.md  evaluation_workflow_version2.md  ollama_test.py  opencode.json  project_workflow.md  pyproject.toml
.agent/workflows/: run-backend.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: locomo-choices-parsing.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
deprecated/: config.py
deprecated/llm_old/: llm_manager.py
deprecated/vector_db_old/: vector_db_manager.py
docs/memblockslib_docs/: 01_SETUP_GUIDE.md  02_METHODS_AND_INTERFACES.md  03_TECHNICAL_OVERVIEW.md
evaluation/: README.md  eval.py  evaluation_issues_report.md  evaluation_workflow_version2.md  fix_timing.py  locomo_eval.py  rerun_baseline.py  run_memblocks_evaluation.py  step_wise_guide.md  test_locomo.py
evaluation/configs/: example_config.yaml  final_eval_config.yaml  quicktest_config.yaml
evaluation/core/: config.py  registry.py
evaluation/datasets/: __init__.py  base.py  default_30_messages.json  locomo.py  test_100_messages.json  test_10_messages.json
frontend/: package-lock.json  package.json
mcp_server/: README.md  pyproject.toml  server.py
tests/: test_hybrid.py  test_llm_integration.py  test_locomo_dataset.py  test_locomo_runner.py  test_reporter.py
(+97 files in other folders)
