[project]
name = "memblocks-workspace"
version = "0.1.0"
description = "UV workspace root for memBlocks monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[tool.uv.workspace]
members = ["memblocks_lib", "backend", "mcp_server"]

[tool.uv.sources]
memblocks = { workspace = true }
